--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -1,8 +1,32 @@
 html
     head
-        link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css')
-        script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js')
+    script(type='javascript')
+         | $(".button-collapse").sideNav();
+    link(rel='stylesheet', href='login.css')
     body
         block content
-        footer
-            block footer
+    block footer
+        footer.page-footer
+            .container
+                .row
+                    .col.l6.s12
+                        h5.white-text Footer Content
+                        p.grey-text.text-lighten-4 You can use rows and columns here to organize your footer content.
+                    .col.l4.offset-l2.s12
+                        h5.white-text Links
+                        ul
+                            li
+                                a.grey-text.text-lighten-3(href='#!') Link 1
+                            li
+                                a.grey-text.text-lighten-3(href='#!') Link 2
+                            li
+                                a.grey-text.text-lighten-3(href='#!') Link 3
+                            li
+                                a.grey-text.text-lighten-3(href='#!') Link 4
+            .footer-copyright
+                .container
+                    | Copyright Noor Jaber &copy; 2019
+                    a.grey-text.text-lighten-4.right(href='#!') More Links
+
